<resources>
    <string name="app_name">TheCheezery</string>
    <string name="welcome">Welcome to The Cheezery</string>
    <string name="description">Home of the most wonderful desserts ever seen (and tasted) by the human being</string>
    <string name="get_started">Get started!</string>

    <!--  fonts families  -->
    <string name="light">sans-serif-light</string>
    <string name="condensed">sans-serif-condensed</string>
    <string name="thin">sans-serif-thin</string>
    <string name="medium">sans-serif-medium</string>
    <string name="regular">sans-serif</string>

    <!--  Register fields  -->
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="contra">Contraseña</string>
    <string name="condiciones">He leído y aceptado los términos y condiciones de uso.</string>
    <string name="registrar">Registrarse</string>

    <!--  main  -->
    <string name="our_menu">Our menu</string>
    <string name="cold_drinks">Cold drinks</string>
    <string name="hot_drinks">Hot drinks</string>
    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>
    <string name="combos">Combos</string>
    <string name="personalized">Personalized</string>


</resources>
