<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/hi"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"/>

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido"/>

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/correo"/>

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/contra"/>

        <CheckBox
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/condiciones"/>

        <Button
            android:layout_marginTop="30dp"
            android:layout_width="219dp"
            android:layout_height="33dp"
            android:background="@drawable/round_button"
            android:text="@string/registrar"
            android:textColor="@color/dastiwait"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>